--- a/Main.Rmd
+++ b/Main.Rmd
@@ -39,26 +39,25 @@ paste("dimensions of the data is", dim(data_filtered_with_distance)[1], "times",
 # preprocessing data and statistics
 
 # colors according to slides Marit and plot conventions
-pheno_vector_absolut = c("CD163+PDL1-","CD163+PDL1+","CD3+CD8-PD1-", "CD3+CD8-PD1+", "CD3+CD8+PD1-", "CD3+CD8+PD1+","Other","Other PDL1+","PAX5+PDL1-", "PAX5+PDL1+", "")
+pheno_vector_absolut = c("CD163+PDL1-","CD163+PDL1+",
+                         "CD3+CD8-PD1-", "CD3+CD8-PD1+", "CD3+CD8+PD1-", "CD3+CD8+PD1+",
+                         "Other","Other PDL1+",
+                         "PAX5+PDL1-", "PAX5+PDL1+", 
+                         "")
 
 colors_absolut = c("magenta", "brown", "red", "blue", "green", "yellow", "gray", "pink", "orange", "cyan", "gray")
 names(colors_absolut) = pheno_vector_absolut
 
 # convention to thresholding data
 
-pheno_vector_separation = c("Macrophage", "Macrophage", "T cells", "T cells", "T cells", "T cells", "Other", "Other", "Tumor", "Tumor", "Other")
-names(pheno_vector_absolut) = pheno_vector_separation
+phenotype_simple = list(Macrophage = c("CD163+PDL1-","CD163+PDL1+"),
+                      Tcells = c("CD3+CD8-PD1-", "CD3+CD8-PD1+", "CD3+CD8+PD1-", "CD3+CD8+PD1+"),
+                      Tumors = c("PAX5+PDL1-", "PAX5+PDL1+"),
+                      Others = c("Other", "Other PDL1+")
+                      )
 
+color_simple = c(Macrophage = "magenta", Tcells = "red", Tumors = "orange", Others = "gray")
 
-colors_absolut_separation = c("magenta", "magenta", "red", "red", "red", "red", "gray", "gray", "orange", "orange", "gray")
-names(colors_absolut_separation) = pheno_vector_separation
-
-
-dim_n = length(pheno_vector_absolut)
-dim_m = 2*dim_n + 2
-statistics = as.data.frame(matrix(rep(0,dim_n*dim_m),dim_n, dim_m))
-colnames(statistics) = c(paste("Area K",pheno_vector_absolut),"Area Kdot", paste("Maxnorm K",pheno_vector_absolut), "Maxnorm Kdot")
-rownames(statistics) = pheno_vector_absolut
 ```
 
 ```{r RUN do analyse on all samples, echo = TRUE, eval = TRUE}
@@ -69,21 +68,33 @@ source("spatstat_vectra.R")
 
 
 # colors according to slides Marit and plot conventions - COMPLETE PHENOTYPING
-pheno_vector_absolut = c("CD163+PDL1-","CD163+PDL1+","CD3+CD8-PD1-", "CD3+CD8-PD1+", "CD3+CD8+PD1-", "CD3+CD8+PD1+","Other","Other PDL1+","PAX5+PDL1-", "PAX5+PDL1+", "")
+phenotype_complete = c("CD163+PDL1-","CD163+PDL1+",
+                       "CD3+CD8-PD1-", "CD3+CD8-PD1+", "CD3+CD8+PD1-", "CD3+CD8+PD1+",
+                       "Other","Other PDL1+",
+                       "PAX5+PDL1-", "PAX5+PDL1+",
+                       "")
 
-colors_absolut = c("magenta", "brown", "red", "blue", "green", "yellow", "gray", "pink", "orange", "cyan", "gray")
-names(colors_absolut) = pheno_vector_absolut
+color_complete = c("magenta", "brown",
+                   "red", "blue", "green", "yellow",
+                   "gray", "pink",
+                   "orange", "cyan",
+                   "gray")
+names(color_complete) = phenotype_complete
 
-pheno_vector_separation = NULL
-colors_absolut_separation = NULL
+fig.prefix.complete = './complete'
 
-# convention to thresholding data - COMMENT LINES 82 TO 86 FOR COMPLETE PHENOTYPING
 
-pheno_vector_separation = c("Macrophage", "Macrophage", "T cells", "T cells", "T cells", "T cells", "Other", "Other", "Tumor", "Tumor", "Other")
-names(pheno_vector_absolut) = pheno_vector_separation
+# colors according to slides Marit and plot conventions - SIMPLE PHENOTYPING
+phenotype_simple = list(Macrophage = c("CD163+PDL1-","CD163+PDL1+"),
+                      Tcells = c("CD3+CD8-PD1-", "CD3+CD8-PD1+", "CD3+CD8+PD1-", "CD3+CD8+PD1+"),
+                      Tumors = c("PAX5+PDL1-", "PAX5+PDL1+"),
+                      Others = c("Other", "Other PDL1+")
+                      )
 
-colors_absolut_separation = c("magenta", "magenta", "red", "red", "red", "red", "gray", "gray", "orange", "orange", "gray")
-names(colors_absolut_separation) = pheno_vector_separation
+color_simple = c(Macrophage = "magenta", Tcells = "red", Tumors = "orange", Others = "gray")
+
+fig.prefix.simple = './simple'
+
 
 
 # run for one sample name
@@ -98,8 +109,7 @@ paste("There are", length(paths), "different samples currently available.")
 
 samples_output = list()
 
-r_vec = c(20)
-# r_vec currently does not work well when given NULL see inside spatstat_vectra
+# Plot variables
 
 plotter_sample = TRUE
 plotter_quadrat = TRUE
@@ -107,37 +117,28 @@ plotter_alltypes = TRUE
 
 plotter_bools = c(plotter_sample, plotter_quadrat, plotter_alltypes)
 
+r_vec = c(20)
+# r_vec currently does not work well when given NULL see inside spatstat_vectra
+
 selected_options = NULL
 
-for (samplename_long in paths[5]){
 
+for (samplename_long in paths[5]){
+  print(samplename_long)
   data = purrr::map_df(samplename_long, read_cell_seg_data, pixels_per_micron = getOption("phenoptr.pixels.per.micron"))
   
   samplename = str_remove(samplename_long,"C:/Users/erikb/Documents/Thesis - Local/Data Marit voor Erik Bosch/Erik Bosch/Data complete phenotyping/HO105_Exported data tables/")
   samplename = str_remove(samplename,"_cell_seg_data.txt")
   
   print(samplename)
+  print(fig.prefix.complete)
+  output = do_analyse(Intable = data, PhenoOrder = phenotype_simple, ColsOrder = color_simple,
+                      XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype',
+                      sample_name = samplename, plotter = plotter_bools, fig.prefix = fig.prefix.simple, fig.width = 720, fig.height = 720,
+                      r_vec = r_vec, options = selected_options, envelope = TRUE)
   
-  # if (TRUE %in% plotter_bools){
-  #   output_dir <- file.path("fig","Complete Phenotype", samplename)
-  #   
-  #   if (!dir.exists(output_dir)){
-  #     dir.create(output_dir)
-  #   } else {
-  #     print(paste("Directory for Complete Phenotype and", samplename, "already exists! Figures were overwritten."))
-  #   }
-  # }
+  # output =  do_analyse(Intable = data, PhenoOrder = pheno_vector_absolut, ColsOrder = colors_absolut, phenotype = pheno_vector_separation, colors_phenotype = colors_absolut_separation, plotter = plotter_bools, fig.prefix = '.', XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = selected_options, envelope_bool = TRUE)
   
-  # #get inside do_analyse
-  # data_with_distance = data %>%
-  #   do(bind_cols(., find_nearest_distance(.)))
-  # paste("dimensions of the data with distances is", dim(data_with_distance)[1], "times", dim(data_with_distance)[2])
-  
-  
-  
-  output =  do_analyse(Intable = data, PhenoOrder = pheno_vector_absolut, ColsOrder = colors_absolut, phenotype = pheno_vector_separation, colors_phenotype = colors_absolut_separation, plotter = plotter_bools, fig.prefix = '.', XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = selected_options, envelope_bool = TRUE)
-  
-  # output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, ColsOrder = colors_absolut, phenotype = NULL, plotter = plotter_bools, fig.prefix = './', XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec, options = selected_options, envelope_bool = TRUE)
   
   samples_output[[samplename]] = output
   # stop()
